# androidoscopy

./: DESIGN.md  README.md  TODO.md  jitpack.yml  test-all.sh
.github/workflows/: dashboard.yml  e2e.yml  sdk.yml  server.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/coil/: build.gradle.kts  consumer-rules.pro
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
android/leakcanary/: build.gradle.kts  consumer-rules.pro
android/okhttp/: build.gradle.kts  consumer-rules.pro
android/sdk/: build.gradle.kts  consumer-rules.pro
android/sdk-ui/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
android/timber/: build.gradle.kts  consumer-rules.pro
android/workmanager/: build.gradle.kts  consumer-rules.pro
dashboard/: package-lock.json  package.json  vite.config.ts
dashboard/e2e/: app.spec.ts
dashboard/src/: App.svelte
dashboard/src/lib/: ErrorBoundary.svelte  FullscreenModal.svelte  SessionCard.svelte  format.ts  (+2 more)
docs/: CUSTOM_DASHBOARD.md  SDK_INTEGRATION.md
e2e/: Cargo.toml
e2e/src/: lib.rs  main.rs  mock_app.rs  mock_dashboard.rs  test_runner.rs
e2e/tests/: full_stack_tests.rs
server/: Cargo.toml  build.rs
server/dashboard/: .gitignore  package-lock.json  package.json
server/dashboard/src/: app.css
server/dashboard/src/lib/: format.test.ts  jsonpath.test.ts
server/dashboard/src/lib/dialogs/: DialogField.svelte
server/dashboard/src/lib/layout/: Section.svelte
server/dashboard/src/lib/stores/: toasts.test.ts  toasts.ts
server/dashboard/src/lib/types/: protocol.ts
server/dashboard/src/lib/widgets/: Badge.svelte  Button.svelte  Gauge.svelte  LogViewer.svelte  NetworkRequestViewer.svelte  SharedPreferencesViewer.svelte  SqliteViewer.svelte  Table.svelte  Text.svelte  logViewerLogic.ts  threshold.test.ts  threshold.ts
server/src/: config.rs  dashboard.rs  discovery.rs  handlers.rs  lib.rs  main.rs  protocol.rs  service.rs  session.rs  state.rs  tls.rs
server/tests/: udp_discovery_integration.rs  websocket_integration.rs
(+102 files in other folders)
