[package]
name = "androidoscopy-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
tower-http = { version = "0.5", features = ["fs"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
dirs = "5"

[dev-dependencies]
tokio-tungstenite = "0.24"
