[package]
name = "androidoscopy-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
tower-http = { version = "0.5", features = ["fs"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
dirs = "5"
rcgen = "0.13"
local-ip-address = "0.6"
clap = { version = "4", features = ["derive"] }
rust-embed = { version = "8", features = ["mime-guess"] }
mime_guess = "2"

[dev-dependencies]
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
